# memewebsite

./: .gitignore  README.md  compose.dev.yaml  justfile  main.py  pyproject.toml
docs/: db_init.sql
email_templates/: notify_admin_email.html
files/: email.html  forgot_password_email.html  verify_email.html
resources/: index.html
scripts/: approve.py  change_password.py  comment.py  globals.py  helpers.py  index.py  login.py  register.py  search.py  upload.py  vote.py
static/: debug.html  index.html  script.js  style.css
templates/: base.html  change_password.html  forgot_password.html  index.html  info.html  message.html  single_post.html  upload.html
terraform/: .terraform.lock.hcl  aws.tf  cloud-init.yaml  hetzner.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
test/: testdata.sql
